Fixed main image on mobile view.

--- a/src/client/app/features/gallery/gallery.component.css
+++ b/src/client/app/features/gallery/gallery.component.css
@@ -43,16 +43,16 @@
 
 .modal-header {
   border-bottom: none;
-  padding: 0;
+  /*padding: 0;*/
 }
 
 .modal-body {
-  padding: 0;
+  /*padding: 0;*/
 }
 
 .modal-footer {
   border-top: none;
-  padding: 0;
+  /*padding: 0;*/
 }
 
 .carousel-inner-image {
@@ -63,13 +63,13 @@
 
 .close {
   color: #ffffff;
-  text-shadow: none;
+  /*text-shadow: none;*/
   font-size: 65px;
   font-weight: normal;
   position: absolute;
-  right: 15px;
+  right: 25px;
   z-index: 9999;
-  top: 0px;
+  top: 40px;
 }
 
 .close:not(:disabled):not(.disabled):hover {
