--- a/src/client/app/features/home/home.component.css
+++ b/src/client/app/features/home/home.component.css
@@ -75,6 +75,8 @@ blockquote {
   .main_background {
     height: 50vh;
     width: auto;
+    object-fit: cover;
+    object-position: 0 0;
   }
 
   .quote-text {
@@ -100,5 +102,7 @@ blockquote {
   .main_background {
     height: 50vh;
     width: auto;
+    object-fit: cover;
+    object-position: 0 0;
   }
 }
